--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Does it look good to you?</title>
+    <title>LGTM? 🤔</title>
 
     <link
       rel="stylesheet"
