🐛 fix a11y button label bug

--- a/web/index.html
+++ b/web/index.html
@@ -376,7 +376,7 @@
           <button
             ref=${btnRef}
             onclick=${onClick}
-            aria-describedby=${tooltipId}
+            aria-labelledby=${tooltipId}
           >
             ${icon}
           </button>
